# gltut-gpipe

./: .gitignore  LICENSE.md  README.md  Tut_01_Hello_Triangle  Tut_02_Playing_with_Colors  Tut_03_OpenGLs_Moving_Triangle  Tut_04  Tut_05_Objects_in_Depth  Tut_06_Objects_in_Motion  Tut_07_World_in_Motion  Tut_08  Tut_09_Lights_on  Tut_10_Plane_Lights  Tut_11  Tut_12  Tut_13  Tut_14  Tut_15  Tut_16_Gamma_and_Textures  Tut_17  build.sh  default.nix
Tut 01 Hello Triangle/hs/: gltut-tut01.cabal  package.yaml  tut1.hs
Tut 01 Hello Triangle/hs/Tutorials/: tut1.hs
Tut 02 Playing with Colors/hs/: FragPosition.hs  FragPosition_SettableViewport.hs  FragPosition_VertexColors.hs  VertexColors.hs  fragPosition.hs  fragPosition_VertexColors.hs  package.yaml  vertexColors.hs
Tut 02 Playing with Colors/hs/Tutorials/: FragPosition.hs  VertexColors.hs
Tut 03 OpenGLs Moving Triangle/hs/: cpuPositionOffset.hs  fragChangeColor.hs  fragChangeColor_SmoothTransition.hs  gltut-tut03.cabal  package.yaml  vertCalcOffset.hs  vertCalcOffset_TwoTriangles.hs  vertPositionOffset.hs
Tut 04 Objects at Rest/hs/: aspectRatio.hs  aspectRatio_PulseFrustrumScale.hs  aspectRatio_PulseZFar.hs  aspectRatio_PulseZNear.hs  aspectRatio_VarProjectionPlane.hs  matrixPerspective.hs  orthoCube.hs  package.yaml  shaderPerspective.hs  shaderPerspective_VarProjectionPlane.hs
Tut 04 Objects at Rest/hs/FurtherStudy/: AspectRatio_PulseFrustrumScale.hs
Tut 04 Objects at Rest/hs/Graphics/GLTut/Tut04/: VarProjectionPlane.hs
Tut 04 Objects at Rest/hs/Tutorials/: MatrixPerspective.hs
Tut 04 Objects at Rest/hs/lib/: Common.hs
Tut 05 Objects in Depth/hs/: gltut-tut05.cabal
Tut 05 Objects in Depth/hs/Tutorials/: BaseVertexOverlap.md  DepthClamping.hs  OverlapNoDepth.hs
Tut 06 Objects in Motion/hs/: cube.vec3  tetrahedron.vec3
Tut 06 Objects in Motion/hs/FurtherStudy/: Translation_ViaRotations.hs
Tut 06 Objects in Motion/hs/Tutorials/: Hierarchy.hs
Tut_01_Hello_Triangle/hs/: gltut-tut01.cabal  gltut01.cabal  tut01.cabal  tut1.hs
Tut_01_Hello_Triangle/hs/Tutorials/: tut1.hs
Tut_02_Playing_with_Colors/hs/: 2a_fragpos.hs  2b_vertcol.hs  2c_hw1.hs  2d_hw2.hs  FragPosition.hs  FragPosition_HW_Viewport.hs  gltut-tut02.cabal  gltut02.cabal  hw_FragPosition_VertexColors.hs  tut02.cabal
Tut_02_Playing_with_Colors/hs/FurtherStudy/: FragPosition_SettableViewport.hs  FragPosition_VertexColors.hs
Tut_02_Playing_with_Colors/hs/Tutorials/: FragPosition.hs  VertexColors.hs
Tut_03_OpenGLs_Moving_Triangle/hs/: 3a.hs  3b.hs  3b_hw1.hs  cpuPositionOffset.hs  gltut-tut03.cabal  gltut03.cabal  tut03.cabal  vertPositionOffset.hs
Tut_03_OpenGLs_Moving_Triangle/hs/FurtherStudy/: fragChangeColor_SmoothTransition.hs  vertCalcOffset_TwoTriangles.hs
Tut_03_OpenGLs_Moving_Triangle/hs/Tutorials/: cpuPositionOffset.hs  fragChangeColor.hs  vertCalcOffset.hs  vertPositionOffset.hs
Tut_03_OpenGLs_Moving_Triangle/hs/further_study/: fragChangeColor_SmoothTransition.hs  vertCalcOffset_TwoTriangles.hs
Tut_04_Objects_at_Rest/hs/: 4a_orthowoffset.hs  4b_hw3_varprojplane.hs  4b_manualpersp.hs  4c_matrixpersp.hs  4d_aspectratio.hs  4d_hw1.hs  4d_hw2_zFar.hs  4d_hw2_zNear.hs  4d_hw4_varprojplane.hs  Args.hs  AspectRatio.hs  Load.hs  MatrixPerspective.hs  OrthoCube.hs  Perspective.hs  ShaderPerspective.hs  TimeFun.hs  gltut-tut04.cabal  gltut04.cabal  hw_AspectRatio_PulseFrustrumScale.hs  hw_AspectRatio_PulseZFar.hs  hw_AspectRatio_PulseZNear.hs  hw_AspectRatio_VarPerspectivePlane.hs  hw_ShaderPerspective_VarPerspectivePlane.hs  model.vec4  tut04.cabal
Tut_04_Objects_at_Rest/hs/FurtherStudy/: AspectRatio_PulseFrustrumScale.hs  AspectRatio_PulseZFar.hs  AspectRatio_PulseZNear.hs  AspectRatio_VarPerspectivePlane.hs  AspectRatio_VarProjectionPlane.hs  ShaderPerspective_VarPerspectivePlane.hs  ShaderPerspective_VarProjectionPlane.hs
Tut_04_Objects_at_Rest/hs/Graphics/GLTut/Tut04/: Models.hs  VarProjectionPlane.hs
Tut_04_Objects_at_Rest/hs/Lib/: Args.hs  Load.hs  Perspective.hs  TimeFun.hs  VarProjectionPlane.hs
Tut_04_Objects_at_Rest/hs/Tutorials/: AspectRatio.hs  MatrixPerspective.hs  OrthoCube.hs  ShaderPerspective.hs
Tut_05_Objects_in_Depth/hs/: 5a_overlapnodepth.hs  5b_depthbuff.hs  DepthBuffer.hs  DepthClamping.hs  Load.hs  Mesh.hs  OverlapNoDepth.hs  Util.hs  VertexClipping.hs  gltut-tut05.cabal  gltut05.cabal  make.sh  obj-horiz.vec4  tut05.cabal  vertiwedge.vec4
Tut_05_Objects_in_Depth/hs/Graphics/GLTut/Tut05/: Models.hs
Tut_05_Objects_in_Depth/hs/Tutorials/: DepthBuffer.hs  DepthClamping.hs  OverlapNoDepth.hs  VertexClipping.hs
Tut_06_Objects_in_Motion/hs/: 6a_translation.hs  6b_scale.hs  6d_hierarchy.hs  AnimUtils.hs  Cube.hs  Hierarchy.hs  MatrixStack.hs  RenderState.hs  RobotArm.hs  Rotations.hs  Scale.hs  Skeleton.hs  Tetrahedron.hs  Translation.hs  Util.hs  gltut-tut06.cabal  gltut06.cabal  tut06.cabal
Tut_06_Objects_in_Motion/hs/DatLib/: Cube.hs  RobotArm.hs  Tetrahedron.hs
Tut_06_Objects_in_Motion/hs/FurtherStudy/: Translation_ViaRotations.hs
Tut_06_Objects_in_Motion/hs/Graphics/GLTut/Tut06/: Models.hs
Tut_06_Objects_in_Motion/hs/Lib/: AnimUtils.hs  MatrixStack.hs  RenderState.hs  Skeleton.hs
Tut_06_Objects_in_Motion/hs/Tutorials/: Hierarchy.hs  Rotations.hs  Scale.hs  Translation.hs
Tut_07_World_in_Motion/hs/: forest.vec4  gltut-tut07.cabal  gltut07.cabal
Tut_07_World_in_Motion/hs/Graphics/GLTut/Tut07/: SphereCoord.hs
Tut_07_World_in_Motion/hs/Lib/: Mesh.hs
Tut_07_World_in_Motion/hs/Lib/Mesh/: Attribute.hs  MAttr.hs  MPrim.hs  MVao.hs  PrimToGPU.hs  Primitive.hs  Util.hs  XML.hs
Tut_07_World_in_Motion/hs/Tutorials/: WorldScene.hs
framework/hs/: Doctest.hs  Example.hs  gltut-framework.cabal  package.yaml  stack.yaml
framework/hs/lib/Graphics/GLTut/: Easing.hs  Framework.hs  Perspective.hs
framework/hs/src/Graphics/GLTut/: Easing.hs  Framework.hs  Load.hs  MatrixStack.hs  Mesh.hs  Perspective.hs  RenderState.hs  Skeleton.hs  Tri.hs  VecFile.hs
framework/hs/src/Graphics/GLTut/Mesh/: Attribute.hs  PrimToGPU.hs  Primitive.hs  Util.hs  XML.hs
(+2 files in other folders)
