name:                gltut-tut01
version:             0.1.0.1
build-type:          Simple
cabal-version:       >= 1.10

executable             tut1
  main-is:             tut1.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base, GLUT, GPipe, Vec, gltut-framework
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
