name:                gltut-tut01
version:             0.1.0.1
build-type:          Simple
cabal-version:       >= 1.10

executable             tut1
  main-is:             tut1.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
