name:                tut01
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

executable             tut1
  main-is:             tut1.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0
  default-language:    Haskell2010
