name:                gltut-tut03
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

executable             cpuPositionOffset
  main-is:             cpuPositionOffset.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, gltut-framework>=0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             vertPositionOffset
  main-is:             vertPositionOffset.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, gltut-framework>=0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             vertCalcOffset
  main-is:             vertCalcOffset.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, gltut-framework>=0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             fragChangeColor
  main-is:             fragChangeColor.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, gltut-framework>=0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             vertCalcOffset_TwoTriangles
  main-is:             vertCalcOffset_TwoTriangles.hs
  hs-source-dirs:      FurtherStudy/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, gltut-framework>=0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             fragChangeColor_SmoothTransition
  main-is:             fragChangeColor_SmoothTransition.hs
  hs-source-dirs:      FurtherStudy/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, gltut-framework>=0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
