name:                gltut03
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

executable             cpuPositionOffset
  main-is:             cpuPositionOffset.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0
  default-language:    Haskell2010

executable             vertPositionOffset
  main-is:             vertPositionOffset.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0
  default-language:    Haskell2010

executable             vertCalcOffset
  main-is:             vertCalcOffset.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0
  default-language:    Haskell2010

executable             fragChangeColor
  main-is:             fragChangeColor.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0
  default-language:    Haskell2010

executable             vertCalcOffset_TwoTriangles
  main-is:             vertCalcOffset_TwoTriangles.hs
  hs-source-dirs:      FurtherStudy/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0
  default-language:    Haskell2010

executable             fragChangeColor_SmoothTransition
  main-is:             fragChangeColor_SmoothTransition.hs
  hs-source-dirs:      FurtherStudy/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0
  default-language:    Haskell2010
