name:                gltut-tut04
version:             0.1.0.1
build-type:          Simple
cabal-version:       >= 1.10
data-files:          cube.vec4

library
  exposed-modules:     Graphics.GLTut.Tut04.VarProjectionPlane,
                       Graphics.GLTut.Tut04.Models
  other-modules:       Paths_gltut_tut04
  build-depends:       base==4.6.0.1, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             OrthoCube
  main-is:             OrthoCube.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, gltut-tut04==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             ShaderPerspective
  main-is:             ShaderPerspective.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, gltut-tut04==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             MatrixPerspective
  main-is:             MatrixPerspective.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, gltut-tut04==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             AspectRatio
  main-is:             AspectRatio.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, gltut-tut04==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             AspectRatio_PulseFrustrumScale
  main-is:             AspectRatio_PulseFrustrumScale.hs
  hs-source-dirs:      FurtherStudy/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, gltut-tut04==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             AspectRatio_PulseZNear
  main-is:             AspectRatio_PulseZNear.hs
  hs-source-dirs:      FurtherStudy/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, gltut-tut04==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             AspectRatio_PulseZFar
  main-is:             AspectRatio_PulseZFar.hs
  hs-source-dirs:      FurtherStudy/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, gltut-tut04==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             ShaderPerspective_VarProjectionPlane
  main-is:             ShaderPerspective_VarProjectionPlane.hs
  hs-source-dirs:      FurtherStudy/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, gltut-tut04==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             AspectRatio_VarProjectionPlane
  main-is:             AspectRatio_VarProjectionPlane.hs
  hs-source-dirs:      FurtherStudy/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, gltut-tut04==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
