name:                gltut-tut05
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10
data-files:          obj-horiz.vec4, obj-vert.vec4

library
  other-modules:       Paths_gltut_tut05
  build-depends:       base>=4.6
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             OverlapNoDepth
  main-is:             OverlapNoDepth.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, gltut-framework>=0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

-- BaseVertexOverlap.md

executable             DepthBuffer
  main-is:             DepthBuffer.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, gltut-framework>=0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             VertexClipping
  main-is:             VertexClipping.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, gltut-framework>=0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             DepthClamping
  main-is:             DepthClamping.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, gltut-framework>=0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

