name:                gltut05
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

executable             OverlapNoDepth
  main-is:             OverlapNoDepth.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, gltut04-0.1.0.0
  default-language:    Haskell2010

-- BaseVertexOverlap.md

executable             DepthBuffer
  main-is:             DepthBuffer.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, gltut04-0.1.0.0
  default-language:    Haskell2010


executable             VertexClipping
  main-is:             VertexClipping.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, gltut04-0.1.0.0
  default-language:    Haskell2010


executable             DepthClamping
  main-is:             DepthClamping.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, gltut04-0.1.0.0
  default-language:    Haskell2010

