name:                gltut-tut06
version:             0.1.0.1
build-type:          Simple
cabal-version:       >= 1.10
data-files:          cube.vec3, tetrahedron.vec3

library
  exposed-modules:     Graphics.GLTut.Tut06.Models,
                       Graphics.GLTut.Tut06.RobotArm
  other-modules:       Paths_gltut_tut06
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, unordered-containers==0.2.3.0
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             Translation
  main-is:             Translation.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, gltut-tut06==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             Scale
  main-is:             Scale.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, gltut-tut06==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             Rotations
  main-is:             Rotations.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, gltut-tut06==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             Hierarchy
  main-is:             Hierarchy.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, gltut-tut06==0.1.0.1, unordered-containers==0.2.3.0
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             Translation_ViaRotations
  main-is:             Translation_ViaRotations.hs
  hs-source-dirs:      FurtherStudy/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, gltut-tut06==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
