name:                tut06
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     Lib.AnimUtils, Lib.MatrixStack, Lib.RenderState Lib.Skeleton,
                       DatLib.Cube, DatLib.RobotArm, DatLib.Tetrahedron
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, unordered-containers>=0.2.3.0
  default-language:    Haskell2010

executable             Translation
  main-is:             Translation.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, tut06
  default-language:    Haskell2010

executable             Scale
  main-is:             Scale.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, tut06
  default-language:    Haskell2010

executable             Rotations
  main-is:             Rotations.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, tut06
  default-language:    Haskell2010

executable             Hierarchy
  main-is:             Hierarchy.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, tut06, unordered-containers>=0.2.3.0
  default-language:    Haskell2010

executable             Translation_ViaRotations
  main-is:             Translation_ViaRotations.hs
  hs-source-dirs:      FurtherStudy/
  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, tut06
  default-language:    Haskell2010
