name:                gltut-tut07
version:             0.1.0.1
build-type:          Simple
cabal-version:       >= 1.10
data-files:          forest.vec4

library
  exposed-modules:     Graphics.GLTut.Tut07.Angle,
                       Graphics.GLTut.Tut07.SphereCoord
  other-modules:       Paths_gltut_tut07
  build-depends:       base==4.6.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable             WorldScene
  main-is:             WorldScene.hs
  hs-source-dirs:      Tutorials/
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, gltut-framework==0.1.0.1, filepath==1.3.0.1, containers==0.5.0.0, gltut-tut07==0.1.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
