name:                gltut07
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     Lib.Mesh
  build-depends:       base>=4.6, xml>=1.3, GPipe>=1.4, Vec>=1, split>=0.2
  default-language:    Haskell2010

--executable             Translation
--  main-is:             Translation.hs
--  hs-source-dirs:      Tutorials/
--  build-depends:       base>=4.6, GLUT>=2.4, GPipe>=1.4, Vec>=1.0, gltut06==0.1.0.0
--  default-language:    Haskell2010
