name:                gltut-framework
version:             0.1.0.1
homepage:            https://github.com/plredmond/gltut_haskell-gpipe
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.10

library
  exposed-modules:     Graphics.GLTut.Easing,
                       Graphics.GLTut.Framework,
                       Graphics.GLTut.MatrixStack,
                       Graphics.GLTut.Mesh,
                       Graphics.GLTut.Perspective,
                       Graphics.GLTut.RenderState,
                       Graphics.GLTut.Skeleton,
                       Graphics.GLTut.Tri,
                       Graphics.GLTut.VecFile
  -- modules not exposed but used by exposed-modules must be in other-modules
  -- this manifests as linker errors in packages which depend on this one
  other-modules:       Graphics.GLTut.Mesh.Attribute,
                       Graphics.GLTut.Mesh.PrimToGPU,
                       Graphics.GLTut.Mesh.Primitive,
                       Graphics.GLTut.Mesh.Util,
                       Graphics.GLTut.Mesh.XML
  other-extensions:    StandaloneDeriving, FlexibleContexts
  build-depends:       base==4.6.0.1, GLUT==2.4.0.0, GPipe==1.4.3, Vec==1.0.1, OpenGL==2.8.0.0, Boolean==0.0.1, unordered-containers==0.2.3.0, hashable==1.1.2.5, containers==0.5.0.0, split==0.2.2, xml==1.3.13
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
