name:                gltut-framework
version:             0.1.0.1
homepage:            https://github.com/plredmond/gltut_haskell-gpipe
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.10

library
  exposed-modules:     Graphics.GLTut.Perspective
--                     Graphics.GLTut.Framework
--                     Graphics.GLTut.Easing
--                     Graphics.GLTut.MatrixStack
--                     Graphics.GLTut.Mesh
--                     Graphics.GLTut.RenderState
--                     Graphics.GLTut.Skeleton
--                     Graphics.GLTut.Tri
--                     Graphics.GLTut.VecFile
--other-modules:       Graphics.GLTut.Mesh.Attribute
--                     Graphics.GLTut.Mesh.PrimToGPU
--                     Graphics.GLTut.Mesh.Primitive
--                     Graphics.GLTut.Mesh.Util
--                     Graphics.GLTut.Mesh.XML
  build-depends:       base,
                       GPipe,
                       GPipe-GLFW,
                       linear,
                       OpenGL,
                       Boolean,
                       unordered-containers,
                       hashable,
                       containers,
                       split,
                       xml
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
